--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check": "npx @biomejs/biome check --write"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
