--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome check .",
-    "check": "npx @biomejs/biome check --write"
+    "format": "biome check . --write"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
