--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "^5.64.1",
+    "@types/leaflet": "^1.9.16",
     "@types/papaparse": "^5.3.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "papaparse": "^5.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.14.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
