--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "d3": "^7.9.0",
     "framer-motion": "^11.15.0",
+    "install": "^0.13.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
